# chrimatocracy

./: .gitignore  LICENSE  Makefile  README.md  chrimatocracy data.web  pyproject.toml
assets/: adj_matrix.py  benford.py  generative_model.py
chrimatocracy/: crimatocracy.py
data_analysis/: all_donations_description.py  donations_descriptive_analysis.py  relationship_votes_donatios_nb.py  state_deputy_candidates_analysis.py
data_preparation/: metadata.py  tranform.py
figures/: benford_distribution_brazil__dep_estadual.pgf  boxplot_donations__dep_estadual_by_party.pgf  brazil_2014_district_deputy_candidates_donations_by_party_boxplot.pgf  brazil_2014_federal_deputy_benford_distribution.pgf  brazil_2014_federal_deputy_candidates_donations_by_party_boxplot.pgf  brazil_2014_federal_deputy_donations_cdf__cnpj.pgf  brazil_2014_federal_deputy_donations_cdf__cpf.pgf  brazil_2014_federal_deputy_donations_cdf__cpf_cnpj.pgf  brazil_2014_governor_benford_distribution.pgf  brazil_2014_governor_candidates_donations_by_party_boxplot.pgf  brazil_2014_governor_donations_cdf__cnpj.pgf  brazil_2014_governor_donations_cdf__cpf.pgf  brazil_2014_governor_donations_cdf__cpf_cnpj.pgf  brazil_2014_president_candidates_donations_by_party_boxplot.pgf  brazil_2014_senator_candidates_donations_by_party_boxplot.pgf  brazil_2014_senator_donations_cdf__cnpj.pgf  brazil_2014_senator_donations_cdf__cpf.pgf  brazil_2014_senator_donations_cdf__cpf_cnpj.pgf  brazil_2014_state_deputy_benford_distribution.pgf  brazil_2014_state_deputy_cat_federative_unity_generative_model_cdf.pgf  (+11 more)
(+160 files in other folders)
